Update 18-09-22.md: Add inner links

--- a/ZukBoard/18-09-22.md
+++ b/ZukBoard/18-09-22.md
@@ -10,9 +10,9 @@
 
 ## Topics
 
-1. Github workflow
-2. Collaboration tools
-3. Plans
+1. [Github workflow](#github-workflow)
+2. [Collaboration tools](#collaboration-tools)
+3. [Plans](#plans)
 
 ## Details
 
